# verdantiq

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: test_infrastructure.yml
backend/: docker-compose.yml
backend/fast-api/: .env.example  Dockerfile  README.md  authenticate.py  configs.py  crud.py  db_config.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements-test.txt  requirements.txt  schemas.py  start.sh
backend/fast-api/test-services/: Dockerfile  requirements.txt
backend/fast-api/test-services/tests/: conftest.py  test_services.py
backend/gateway/: Dockerfile  nginx.conf
backend/hive/: Dockerfile.hive-metastore  hive-minio.xml  hive-site.xml
backend/iot/simulator/: requirements.txt  simulator.py
backend/kafka/exporter/: Dockerfile.kafkaexporter
backend/kafka/kafka_utils/: util_serializer.py  zkok.sh
backend/kafka/schema-registry/: Dockerfile.schema-registry  schema-registry.properties
backend/kafka/zookeeper/: Dockerfile.zookeeper
backend/prometheus/: prometheus.yml
backend/scripts/: seed_farms.py
backend/services/auth/: Dockerfile  authenticate.py  configs.py  crud.py  db_config.py  main.py  models.py  pyproject.toml  schemas.py  start.sh
backend/services/sensor/: Dockerfile  authenticate.py  configs.py  crud.py  main.py  models.py  pyproject.toml  schemas.py  start.sh
backend/services/tenant/: .dockerignore  Dockerfile  authenticate.py  configs.py  crud.py  main.py  models.py  pyproject.toml  schemas.py  start.sh
backend/services/tenant/tests/: conftest.py  test_tenant.py
backend/spark/: Dockerfile.spark  bronze_job.py
backend/spark/config/: configuration.conf
backend/test-infra/: Dockerfile  pyproject.toml  requirements.txt
backend/test-infra/tests/: local-test.py  test.py  test_infrastructure.py  test_infrastructure_local.py
data-services/: docker-compose.yml
data-services/data_service/: Dockerfile  main.py  requirements.txt
data-services/grafana/: Dockerfile.grafana
data-services/grafana/conf/: kafka-dashboard.yml
data-services/grafana/dashboard/: dashboards.yml  kafka-metrics.json
data-services/hive/: Dockerfile.hive-metastore  Dockerfile.hive-server
data-services/hive/scripts/: init-schema.sh  start-hiveserver2.sh  start-metastore.sh  wait-for-postgres.sh
data-services/iceberg/: Dockerfile.iceberg
data-services/iot/simulator/: mqtt_publisher.py  simulator.py
data-services/kafka/exporter/: Dockerfile.kafkaexporter  kafka-export-entrypoint.sh
data-services/kafka/kafka_utils/: create-topic.py  create_sensor_topic.sh
data-services/kafka/schema-registry/: Dockerfile.schema-registry  entrypoint.sh  schema-registry.properties
data-services/kafka/zookeeper/: Dockerfile.zookeeper  zoo.cfg
data-services/mqtt/: Dockerfile.mosquitto  mosquitto.conf
data-services/mqtt/bridge/: Dockerfile  bridge.py  requirements.txt
data-services/prometheus/: kafka-jmx-exporter.yml  prometheus.yml  rules.yml
data-services/spark/: Dockerfile.spark  metrics.properties  sensor_streaming_job.py  spark-entrypoint.sh
data-services/spark/config/: configuration.conf
data-services/trino/etc/: config.properties  jvm.config  node.properties
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: CodeBlock.tsx  CountrySelect.tsx  DashboardLayout.tsx  DemoOutlet.tsx  EndpointCard.tsx  Footer.tsx  Header.tsx  InputComponent.tsx  LoadingSpinner.tsx  MarketingFooter.tsx  MarketingLayout.tsx  Modal.tsx  MultipleSelectDropDown.tsx  PrivateRoute.tsx  QuestionImage.tsx  QuestionOutlet.tsx  SelectDropDown.tsx  SelectDurationModal.tsx  SelectSubjectsModal.tsx  SelectYearModal.tsx  SettingsNavbar.tsx  Spinner.tsx  TextAreaInputField.tsx  TextInputField.tsx  newUser.json
frontend/src/constants/: APIendPoints.ts
frontend/src/data/: countries.ts
frontend/src/hooks/: useBillingRates.ts  usePageTitle.ts
frontend/src/icons/: ArrowDownIcon.tsx  ArrowIcon.tsx  ArrowLeftIcon.tsx  ArrowUpIcon.tsx  CheckMark.tsx  Dashboardicont.tsx  DemoQuestionIcon.tsx  (+7 more)
util/: spark-lib-downloader.sh
(+75 files in other folders)
