[project]
name = "verdantiq-api"
version = "0.1.0"
description = "VerdantIQ Multi-Tenant Precision Agriculture API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pwdlib[bcrypt]>=0.2.1",
    "PyJWT>=2.10.0",
    "cryptography>=44.0.0",
    "python-dateutil>=2.9.0",
    "trino>=0.330.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-xdist==3.6.1",
    "pytest-asyncio==0.24.0",
    "httpx>=0.28.0",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "ruff==0.9.0",
    "mypy==1.13.0",
    "types-python-dateutil==2.9.0.20241206",
    "sqlalchemy[mypy]>=2.0.36",
]

# ─── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["test-services/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ─── ruff (linter + formatter — replaces flake8, isort, black) ───────────────
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501 = line too long (handled by formatter)
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["main", "models", "schemas", "crud", "configs", "authenticate"]

# ─── mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
