[project]
name = "verdantiq-tenant"
version = "0.1.0"
description = "VerdantIQ Tenant & Billing Service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.7.1",
    "PyJWT>=2.10.0",
    "cryptography>=44.0.0",
    "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --cov=. --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = ["tests/*", "db_config.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
